# zuul-jobs

./: .gitignore  .gitreview  .zuul.yaml  README.md  README.rst  bindep.txt  setup.cfg  test-requirements.txt  tox.ini  zuul.yaml
doc/source/: afs-roles.rst  conf.py  container-roles.rst  deprecated-roles.rst  deprecation.rst  docker-image.rst  docker-jobs.rst  galaxy-roles.rst  general-jobs.rst  general-roles.rst  index.rst  install.rst  jobs.rst  js-jobs.rst  js-roles.rst  launchpad-roles.rst  log-roles.rst  policy.rst  puppet-roles.rst  python-jobs.rst  python-roles.rst  roles.rst  translation-roles.rst
playbooks/base/: pre.yaml
playbooks/dco-license/: run.yaml
playbooks/docker-image/: README.rst  credentials.rst  pre.yaml
playbooks/integration-tests/: README.rst  base.yaml  configure-mirrors.yaml
playbooks/javascript/: pre-test.yaml  pre.yaml  run-docs.yaml  run-lint.yaml  run-test.yaml  run.yaml
playbooks/multinode/: pre.yaml
playbooks/python/: readthedocs.yaml  sdist.yaml  upload-pypi.yaml
playbooks/releasenotes/: post.yaml
playbooks/run-test-command/: run.yaml
playbooks/sphinx/: pre.yaml
playbooks/tox/: docs-post.yaml  linters.yaml  post.yaml  pre.yaml  tarball-post.yaml  tarball.yaml
playbooks/tox-docs/: pre.yaml
playbooks/unittests/: post.yaml  pre.yaml  python.yaml
playbooks/upload-git-mirror/: run.yaml
roles/add-authorized-keys/: README.rst
roles/add-build-sshkey/: README.rst
roles/add-fileserver/: README.rst
roles/add-gpgkey/: README.rst
tests/: test_discovery.py
tools/: check_jobs_documented.py
zuul_sphinx/: zuul.py
(+353 files in other folders)
